force-app/main/default/objects/WorkOrder/fields/Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected__c</fullName>
    <label>Amount Collected</label>
    <length>20</length>
    <type>Text</type>
</CustomField>