force-app/main/default/objects/WorkOrder/fields/Comments_on_service_appointment__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_service_appointment__c</fullName>
    <label>Comments on service appointment</label>
    <type>TextArea</type>
</CustomField>