force-app/main/default/objects/WorkOrder/fields/Coolant__c.field-meta.xml
<CustomField>
    <fullName>Coolant__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Coolant</label>
    <type>Checkbox</type>
</CustomField>