force-app/main/default/objects/WorkOrder/fields/Cooling__c.field-meta.xml
<CustomField>
    <fullName>Cooling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cooling</label>
    <type>Checkbox</type>
</CustomField>