force-app/main/default/objects/WorkOrder/fields/Customer_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Customer_Remarks__c</fullName>
    <label>Customer Remarks</label>
    <type>TextArea</type>
</CustomField>