force-app/main/default/objects/WorkOrder/fields/Engineer_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Remarks__c</fullName>
    <label>Engineer Remarks</label>
    <type>TextArea</type>
</CustomField>