force-app/main/default/objects/WorkOrder/fields/FW__c.field-meta.xml
<CustomField>
    <fullName>FW__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FW</label>
    <type>Checkbox</type>
</CustomField>