force-app/main/default/objects/WorkOrder/fields/Operation_Code__c.field-meta.xml
<CustomField>
    <fullName>Operation_Code__c</fullName>
    <label>Operation Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>