force-app/main/default/objects/WorkOrder/fields/Serviced__c.field-meta.xml
<CustomField>
    <fullName>Serviced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serviced</label>
    <type>Checkbox</type>
</CustomField>