force-app/main/default/objects/WorkOrder/fields/UCC_Code__c.field-meta.xml
<CustomField>
    <fullName>UCC_Code__c</fullName>
    <label>UCC Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>